remove unused packages

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "build:prod": "NODE_ENV=production npm run build:server && npm run build:client:prod",
     "start": "NODE_ENV=production node lib/server/index.js",
     "dev": "npm run build:server && NODE_ENV=development npm run start",
-    "dev:configfile": "npm run build:server && NODE_ENV=development CONFIG_FILE=./config_file.txt node lib/server/index.js",
+    "dev:configfile": "npm run build:server && NODE_ENV=development CONFIG_FILE=./config/cm_libraries.txt node lib/server/index.js",
     "generate-icons": "npx @svgr/cli --template src/icons/_template.js --typescript --icon --ext tsx -d src/icons src/icons",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
@@ -44,7 +44,6 @@
     "@storybook/addons": "^5.3.12",
     "@storybook/preset-typescript": "^1.2.0",
     "@storybook/react": "^5.3.12",
-    "@svgr/webpack": "^5.0.1",
     "@testing-library/jest-dom": "^5.1.1",
     "@testing-library/react": "^9.5.0",
     "@testing-library/react-hooks": "^3.2.1",
@@ -59,11 +58,9 @@
     "@types/react-router-dom": "^5.1.3",
     "@types/theme-ui": "^0.3.0",
     "@typescript-eslint/eslint-plugin": "^2.19.0",
-    "@typescript-eslint/eslint-plugin-tslint": "^2.19.0",
     "@typescript-eslint/parser": "^2.19.0",
     "babel-jest": "^25.1.0",
     "babel-loader": "^8.0.6",
-    "chai": "^4.2.0",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.4.1",
     "enzyme": "^3.11.0",
@@ -85,29 +82,23 @@
     "lint-staged": "^9.5.0",
     "mini-css-extract-plugin": "^0.5.0",
     "mocha": "^7.0.1",
-    "node-sass": "4.13.0",
+    "node-sass": "^4.13.1",
     "prettier": "1.19.1",
     "react-axe": "^3.3.0",
-    "react-docgen-typescript-loader": "^3.6.0",
-    "react-hot-loader": "^4.12.16",
-    "react-svg-loader": "^3.0.3",
     "sass-lint": "^1.9.1",
     "sass-loader": "^7.1.0",
-    "sinon": "^7.3.0",
     "style-loader": "^1.1.2",
-    "ts-loader": "^6.2.1",
-    "ts-node": "^8.6.2",
     "typescript": "^3.7.5",
     "url-loader": "^3.0.0",
     "webpack": "^4.29.6",
-    "webpack-cli": "^3.3.0",
+    "webpack-cli": "^3.3.11",
     "webpack-dev-middleware": "^3.7.2",
     "webpack-hot-middleware": "^2.25.0",
-    "webpack-manifest-plugin": "^2.2.0",
-    "webpack-merge": "^4.2.1"
+    "webpack-manifest-plugin": "^2.2.0"
   },
   "dependencies": {
     "@csstools/normalize.css": "^10.1.0",
+    "@emotion/core": "^10.0.28",
     "@emotion/styled": "^10.0.27",
     "@theme-ui/color": "^0.3.1",
     "@theme-ui/components": "^0.3.1",
@@ -122,25 +113,27 @@
     "history": "^4.10.1",
     "isomorphic-fetch": "^2.2.1",
     "jsdom": "^16.2.1",
+    "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "opds-feed-parser": "0.0.16",
     "opds-web-client": "^0.3.7",
-    "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.13.1",
     "react-helmet-async": "^1.0.4",
     "react-hook-form": "^4.9.2",
+    "react-hot-loader": "^4.12.20",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-spinners": "^0.8.0",
     "reakit": "^1.0.0-beta.16",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
+    "request": "^2.88.2",
     "styled-system": "^5.1.2",
     "theme-ui": "^0.3.1",
-    "tinycolor2": "^1.4.1",
-    "universal-url": "^1.0.1"
+    "universal-url": "^1.0.1",
+    "webpack-merge": "^4.2.2"
   },
   "husky": {
     "hooks": {
