--- a/package.json
+++ b/package.json
@@ -20,9 +20,7 @@
     "build:prod": "NODE_ENV=production npm run build:server && npm run build:client:prod",
     "start": "NODE_ENV=production node lib/server/index.js",
     "dev": "npm run build:server && NODE_ENV=development npm run start",
-    "generate-icons": "npx @svgr/cli --template src/icons/_template.js --typescript --icon --ext tsx -d src/icons src/icons",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "generate-icons": "npx @svgr/cli --template src/icons/_template.js --typescript --icon --ext tsx -d src/icons src/icons"
   },
   "devDependencies": {
     "@babel/core": "^7.7.2",
@@ -35,14 +33,6 @@
     "@babel/preset-typescript": "^7.7.2",
     "@babel/register": "^7.8.3",
     "@hot-loader/react-dom": "^16.11.0",
-    "@storybook/addon-a11y": "^5.3.12",
-    "@storybook/addon-actions": "^5.3.12",
-    "@storybook/addon-console": "^1.2.1",
-    "@storybook/addon-links": "^5.3.12",
-    "@storybook/addon-storyshots": "^5.3.12",
-    "@storybook/addons": "^5.3.12",
-    "@storybook/preset-typescript": "^1.2.0",
-    "@storybook/react": "^5.3.12",
     "@testing-library/jest-dom": "^5.1.1",
     "@testing-library/react": "^9.5.0",
     "@testing-library/react-hooks": "^3.2.1",
@@ -53,6 +43,7 @@
     "@types/mocha": "^7.0.1",
     "@types/node": "^12.12.3",
     "@types/react": "^16.8.25",
+    "@types/react-helmet": "^5.0.15",
     "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.1.3",
     "@types/theme-ui": "^0.3.0",
@@ -102,7 +93,6 @@
     "@theme-ui/color": "^0.3.1",
     "@theme-ui/components": "^0.3.1",
     "@theme-ui/match-media": "^0.3.1",
-    "@types/react-helmet": "^5.0.15",
     "deepmerge": "^4.2.2",
     "downloadjs": "^1.4.7",
     "express": "^4.14.0",
