--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@typescript-eslint/parser": "^2.19.0",
     "babel-jest": "^25.1.0",
     "babel-loader": "^8.0.6",
+    "babel-plugin-emotion": "^10.0.33",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.4.1",
     "enzyme": "^3.11.0",
