--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "build:client:prod": "webpack -p --progress --config webpack.prod.config",
     "build:prod": "NODE_ENV=production npm run build:server && npm run build:client:prod",
     "start": "NODE_ENV=production node lib/server/index.js",
-    "dev": "npm run build:server && NODE_ENV=development npm run start",
+    "dev": "npm run build:server && NODE_ENV=development node lib/server/index.js",
     "generate-icons": "npx @svgr/cli --template src/icons/_template.js --typescript --icon --ext tsx -d src/icons src/icons"
   },
   "devDependencies": {
