Move docker into main repo
* add docker files

* remove docker submodule

* update readme

* update dockerfiles

* remove bad comment

* rename build to builder

* remove entrypoint and build files

* version and changelog

* fix README scripts

* fix docker-compose prompts

* update readme headers

* 2.0.0

* update changelog version number

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "build:server": "tsc",
-    "build:client:prod": "webpack -p --progress --config webpack.prod.config",
+    "build:client:prod": "webpack -p --progress --config webpack.prod.js",
     "build:prod": "NODE_ENV=production npm run build:server && npm run build:client:prod",
     "start": "NODE_ENV=production node lib/server/index.js",
     "dev": "npm run build:server && NODE_ENV=development node lib/server/index.js",
