--- a/.github/workflows/publish-beta.yml
+++ b/.github/workflows/publish-beta.yml
@@ -26,6 +26,6 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
           repository: nypl/patron-web
-          # tag the iamge with both beta and beta.short_sha
+          # tag the image with both beta and beta.short_sha
           tags: beta, beta.${{ steps.get_sha.outputs.short_sha }}
           add_git_labels: true
