--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,33 @@
-lib/*
-dist/*
-node_modules/*
-typings/*
-*~
-npm-debug.log
-config/cm_libraries.txt
+# dependencies
+/node_modules
+
+# testing
+/coverage
+
+# next.js
+/.next/
+/out/
+
+# production
+/build
+
+# misc
+.DS_Store
+
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# local env files
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# local developer files
 .yalc
 yalc.lock
 wallaby.js
-config/*
+config/
+.vscode/
