--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "simplified-circulation-patron-web",
-  "version": "2.0.2",
+  "version": "2.1.0",
   "description": "patron UI for Circulation Manager",
   "repository": {
     "type": "git",
@@ -9,84 +9,15 @@
   "author": "NYPL",
   "license": "Apache-2.0",
   "scripts": {
-    "lint": "npm run lint:ts && npm run lint:sass",
-    "lint:ts": "./node_modules/.bin/eslint -c .eslintrc.js src/**/*.ts src/**/*.tsx",
-    "lint:ts:fix": "./node_modules/.bin/eslint -c .eslintrc.js src/**/*.ts src/**/*.tsx --fix",
-    "lint:sass": "sass-lint -c .sass-lint.yml -v -q",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "build:server": "tsc",
-    "build:client:prod": "webpack -p --progress --config webpack.prod.js",
-    "build:prod": "NODE_ENV=production npm run build:server && npm run build:client:prod",
-    "start": "NODE_ENV=production node lib/server/index.js",
-    "dev": "npm run build:server && NODE_ENV=development node lib/server/index.js",
-    "dev:axe": "AXE_TEST=true npm run dev",
+    "dev": "next dev",
+    "dev:axe": "REACT_AXE=true npm run dev",
+    "build": "next build",
+    "start": "next start",
+    "test": "jest --watch",
+    "test:ci": "jest --ci",
+    "lint": "eslint '*/**/*.{ts,tsx}'",
+    "lint:fix": "eslint '*/**/*.{js,ts,tsx}' --quiet --fix",
     "generate-icons": "npx @svgr/cli --template src/icons/_template.js --typescript --icon --ext tsx -d src/icons src/icons"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.7.2",
-    "@babel/plugin-proposal-class-properties": "^7.7.0",
-    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.7.4",
-    "@babel/plugin-proposal-optional-chaining": "^7.7.4",
-    "@babel/plugin-transform-runtime": "^7.7.6",
-    "@babel/preset-env": "^7.7.1",
-    "@babel/preset-react": "^7.7.0",
-    "@babel/preset-typescript": "^7.7.2",
-    "@babel/register": "^7.8.3",
-    "@hot-loader/react-dom": "^16.11.0",
-    "@testing-library/jest-dom": "^5.1.1",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/react-hooks": "^3.2.1",
-    "@testing-library/user-event": "^10.0.0",
-    "@types/enzyme": "^3.10.5",
-    "@types/express": "^4.17.2",
-    "@types/jest": "^25.1.3",
-    "@types/mocha": "^7.0.1",
-    "@types/node": "^12.12.3",
-    "@types/react": "^16.8.25",
-    "@types/react-helmet": "^5.0.15",
-    "@types/react-redux": "^7.1.7",
-    "@types/react-router-dom": "^5.1.3",
-    "@types/theme-ui": "^0.3.0",
-    "@typescript-eslint/eslint-plugin": "^2.19.0",
-    "@typescript-eslint/parser": "^2.19.0",
-    "babel-jest": "^25.1.0",
-    "babel-loader": "^8.0.6",
-    "babel-plugin-emotion": "^10.0.33",
-    "clean-webpack-plugin": "^3.0.0",
-    "css-loader": "^3.4.1",
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.2",
-    "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.10.0",
-    "eslint-config-react": "^1.1.7",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-prettier": "^3.1.2",
-    "eslint-plugin-react": "^7.18.3",
-    "eslint-plugin-react-hooks": "^2.3.0",
-    "fetch-mock": "^7.3.1",
-    "file-loader": "^5.0.2",
-    "fork-ts-checker-webpack-plugin": "^3.1.0",
-    "html-webpack-plugin": "^3.2.0",
-    "husky": "^3.1.0",
-    "jest": "^25.1.0",
-    "jest-emotion": "^10.0.32",
-    "lint-staged": "^9.5.0",
-    "mini-css-extract-plugin": "^0.5.0",
-    "mocha": "^7.0.1",
-    "node-sass": "^4.13.1",
-    "prettier": "1.19.1",
-    "react-axe": "^3.3.0",
-    "sass-lint": "^1.9.1",
-    "sass-loader": "^7.1.0",
-    "style-loader": "^1.1.2",
-    "typescript": "^3.7.5",
-    "url-loader": "^3.0.0",
-    "webpack": "^4.29.6",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-middleware": "^3.7.2",
-    "webpack-hot-middleware": "^2.25.0",
-    "webpack-manifest-plugin": "^2.2.0"
   },
   "dependencies": {
     "@csstools/normalize.css": "^10.1.0",
@@ -97,51 +28,59 @@
     "@theme-ui/match-media": "^0.3.1",
     "deepmerge": "^4.2.2",
     "downloadjs": "^1.4.7",
-    "express": "^4.14.0",
-    "fetch-mock-jest": "^1.2.4",
     "font-awesome": "^4.7.0",
     "history": "^4.10.1",
-    "isomorphic-fetch": "^2.2.1",
-    "jsdom": "^16.2.1",
+    "jsdom": "^16.2.2",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
-    "opds-feed-parser": "0.0.16",
+    "next": "^9.4.2",
+    "opds-feed-parser": "0.0.18",
     "opds-web-client": "^0.4.2",
-    "react": "^16.13.1",
-    "react-bootstrap": "^0.32.4",
-    "react-dom": "^16.13.1",
-    "react-helmet-async": "^1.0.4",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
     "react-hook-form": "^4.9.2",
     "react-hot-loader": "^4.12.20",
     "react-redux": "^7.2.0",
-    "react-router-dom": "^5.1.2",
     "react-spinners": "^0.8.0",
-    "reakit": "^1.0.0-beta.16",
+    "reakit": "^1.0.0-rc.2",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
     "request": "^2.88.2",
     "styled-system": "^5.1.2",
     "theme-ui": "^0.3.1",
-    "universal-url": "^1.0.1",
-    "webpack-merge": "^4.2.2"
+    "universal-url": "^1.0.1"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "lint-staged": {
-    "*.{ts,tsx,js,json}": [
-      "prettier --write",
-      "git add"
-    ],
-    "*.{ts,tsx}": [
-      "eslint --fix --quiet",
-      "git add"
-    ]
-  },
-  "engines": {
-    "node": "13.x"
+  "devDependencies": {
+    "@next/bundle-analyzer": "^9.4.0",
+    "@testing-library/jest-dom": "^5.5.0",
+    "@testing-library/react": "^10.0.2",
+    "@testing-library/react-hooks": "^3.2.1",
+    "@testing-library/user-event": "^10.1.0",
+    "@types/history": "^4.7.5",
+    "@types/jest": "^25.2.1",
+    "@types/node": "^13.11.0",
+    "@types/react": "^16.9.32",
+    "@types/react-redux": "^7.1.8",
+    "@types/theme-ui": "^0.3.1",
+    "@typescript-eslint/eslint-plugin": "^2.31.0",
+    "@typescript-eslint/parser": "^2.31.0",
+    "babel-jest": "^25.2.6",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
+    "eslint": "^7.0.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-react": "^7.19.0",
+    "eslint-plugin-react-hooks": "^4.0.0",
+    "fetch-mock": "^9.4.0",
+    "fetch-mock-jest": "^1.2.4",
+    "jest": "^25.3.0",
+    "jest-emotion": "^10.0.32",
+    "prettier": "2.0.5",
+    "react-axe": "^3.4.1",
+    "react-test-renderer": "^16.13.1",
+    "typescript": "^3.8.3"
   },
   "prettier": {
     "arrowParens": "avoid",
