--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "test:ci": "jest --ci",
     "lint": "eslint '*/**/*.{ts,tsx}'",
     "lint:fix": "eslint '*/**/*.{js,ts,tsx}' --quiet --fix",
-    "generate-icons": "npx @svgr/cli --template src/icons/_template.js --typescript --icon --ext tsx -d src/icons src/icons"
+    "generate-icons": "npx @svgr/cli --template src/icons/_template.js --typescript --icon --ext tsx --svg-props 'fill=currentColor' -d src/icons src/icons"
   },
   "dependencies": {
     "@csstools/normalize.css": "^10.1.0",
