--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,7 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": false,
     "skipLibCheck": true,
     "strict": false,
@@ -22,15 +18,14 @@
     "importHelpers": true,
     "baseUrl": "src"
   },
-  "exclude": [
-    "node_modules",
-    "config/srv"
-  ],
+  "exclude": ["node_modules", "config/srv"],
   "include": [
     "next-env.d.ts",
     "**/*.ts",
     ".eslintrc.js",
     "**/*.tsx",
-    "next.config.js"
+    "next.config.js",
+    "src/utils/require.js",
+    "src/utils/fetch.js"
   ]
 }
