tslint ignore webpub-viewer files for now while viewer npm pkg is in the works

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,8 @@
     "importHelpers": true,
     "baseUrl": "src"
   },
-  "exclude": ["node_modules", "config/srv"],
+  "excludedFiles": "*.test.js",
+  "exclude": ["node_modules", "config/srv", "src/webpub-viewer"],
   "include": [
     "next-env.d.ts",
     "**/*.ts",
