--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
     "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
-    "isolatedModules": true,
+    // "isolatedModules": true, temporarily disabled for webpub-viewer
     "jsx": "preserve",
     "strictNullChecks": true,
     "downlevelIteration": true,
