--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "generate-icons": "npx @svgr/cli --template src/icons/_template.js --typescript --icon --ext tsx -d src/icons src/icons"
   },
   "dependencies": {
+    "@babel/runtime": "^7.10.2",
     "@csstools/normalize.css": "^10.1.0",
     "@emotion/core": "^10.0.28",
     "@emotion/styled": "^10.0.27",
@@ -51,6 +52,9 @@
     "universal-url": "^1.0.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.10.2",
+    "@babel/plugin-transform-runtime": "^7.10.1",
+    "@babel/preset-env": "^7.10.2",
     "@next/bundle-analyzer": "^9.4.0",
     "@testing-library/jest-dom": "^5.5.0",
     "@testing-library/react": "^10.0.2",
@@ -77,6 +81,7 @@
     "fetch-mock-jest": "^1.2.4",
     "jest": "^25.3.0",
     "jest-emotion": "^10.0.32",
+    "library-simplified-webpub-viewer": "https://github.com/NYPL-Simplified/webpub-viewer#NOREF_convert_to_es6",
     "prettier": "2.0.5",
     "react-axe": "^3.4.1",
     "react-test-renderer": "^16.13.1",
