--- a/package.json
+++ b/package.json
@@ -31,9 +31,11 @@
     "font-awesome": "^4.7.0",
     "history": "^4.10.1",
     "jsdom": "^16.2.2",
+    "library-simplified-webpub-viewer": "https://github.com/NYPL-Simplified/webpub-viewer#testingExplodedEPubs",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "next": "^9.4.2",
+    "next-transpile-modules": "^3.3.0",
     "opds-feed-parser": "0.0.18",
     "opds-web-client": "^0.4.2",
     "react": "16.13.1",
@@ -77,7 +79,6 @@
     "fetch-mock-jest": "^1.2.4",
     "jest": "^25.3.0",
     "jest-emotion": "^10.0.32",
-    "library-simplified-webpub-viewer": "https://github.com/NYPL-Simplified/webpub-viewer#testingExplodedEPubs",
     "prettier": "2.0.5",
     "react-axe": "^3.4.1",
     "react-test-renderer": "^16.13.1",
