Loads encrypted ebook

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "author": "NYPL",
   "license": "Apache-2.0",
   "scripts": {
-    "dev": "next dev",
+    "postinstall": "if test \"$AXIS_NOW_DECRYPT\" = \"true\" ; then cd axisnow-access-control-web && npm install ; fi ",
+    "dev": "node server.js",
     "dev:axe": "REACT_AXE=true npm run dev",
     "build": "next build",
     "start": "next start",
