--- a/.env
+++ b/.env
@@ -12,3 +12,6 @@ CACHE_EXPIRATION_SECONDS=86400
 # process.env values are strings, so setting this to "false" will
 # unexpectedly turn it on.
 # REACT_AXE=true
+
+# turn this on to enable axisNow decryption
+# AXIS_NOW_DECRYPT=true
