--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "font-awesome": "^4.7.0",
     "history": "^4.10.1",
     "jsdom": "^16.2.2",
-    "library-simplified-webpub-viewer": "https://github.com/NYPL-Simplified/webpub-viewer#testingExplodedEPubs",
+    "library-simplified-webpub-viewer": "0.1.2",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "next": "^9.4.2",
