--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "Apache-2.0",
   "scripts": {
     "postinstall": "if test \"$AXIS_NOW_DECRYPT\" = \"true\" ; then cd axisnow-access-control-web && npm install ; fi ",
+    "testing": "SIMPLIFIED_CATALOG_BASE=https://qa-circulation.openebooks.us/USOEI/groups SHORTEN_URLS=false npm run dev",
     "dev": "node dev-server.js",
     "dev:axe": "REACT_AXE=true npm run dev",
     "build": "next build",
@@ -33,20 +34,20 @@
     "font-awesome": "^4.7.0",
     "history": "^4.10.1",
     "jsdom": "^16.2.2",
-    "library-simplified-webpub-viewer": "0.1.3",
+    "library-simplified-webpub-viewer": "git://github.com/NYPL-Simplified/webpub-viewer#accessControl",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "next": "^9.4.2",
     "next-transpile-modules": "^4.0.0",
     "opds-feed-parser": "0.0.18",
-    "opds-web-client": "^0.4.7",
+    "opds-web-client": "git://github.com/NYPL-Simplified/opds-web-client#opds-web-client-v0.5.2-gitpkg",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-hook-form": "^4.9.2",
     "react-hot-loader": "^4.12.20",
-    "react-redux": "^7.2.0",
+    "react-redux": "^7.2.1",
     "reakit": "^1.0.0-rc.2",
-    "redux": "^4.0.1",
+    "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "request": "^2.88.2",
     "styled-system": "^5.1.2",
