--- a/package.json
+++ b/package.json
@@ -32,16 +32,18 @@
     "font-awesome": "^4.7.0",
     "history": "^4.10.1",
     "jsdom": "^16.2.2",
+    "library-simplified-webpub-viewer": "0.1.3",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "next": "^9.4.2",
+    "next-transpile-modules": "^4.0.0",
     "opds-feed-parser": "0.0.18",
     "opds-web-client": "^0.5.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-hook-form": "^4.9.2",
     "react-hot-loader": "^4.12.20",
-    "react-redux": "^7.2.0",
+    "react-redux": "7.2.1",
     "reakit": "^1.0.0-rc.2",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
@@ -54,14 +56,14 @@
   "devDependencies": {
     "@next/bundle-analyzer": "^9.4.0",
     "@testing-library/jest-dom": "^5.5.0",
-    "@testing-library/react": "^10.0.2",
+    "@testing-library/react": "^10.2.0",
     "@testing-library/react-hooks": "^3.2.1",
-    "@testing-library/user-event": "^10.1.0",
+    "@testing-library/user-event": "^10.0.1",
     "@types/history": "^4.7.5",
     "@types/jest": "^25.2.1",
     "@types/node": "^13.11.0",
-    "@types/react": "^16.9.32",
-    "@types/react-redux": "^7.1.8",
+    "@types/react": "^16.9.43",
+    "@types/react-redux": "^7.1.9",
     "@types/theme-ui": "^0.3.1",
     "@typescript-eslint/eslint-plugin": "^2.31.0",
     "@typescript-eslint/parser": "^2.31.0",
