set default test TZ and update FulfillmentCard tests (#114)
* set default test TZ and update FulfillmentCard tests to be compatible with opds-web-client 0.5.2+

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "dev:axe": "REACT_AXE=true npm run dev",
     "build": "next build",
     "start": "next start",
-    "test": "jest --watch",
+    "test": "TZ=UTC jest --watch",
     "test:ci": "jest --ci",
     "lint": "eslint '*/**/*.{ts,tsx}'",
     "lint:fix": "eslint '*/**/*.{js,ts,tsx}' --quiet --fix",
@@ -38,7 +38,7 @@
     "next": "^9.4.2",
     "next-transpile-modules": "^4.0.0",
     "opds-feed-parser": "0.0.18",
-    "opds-web-client": "^0.5.1",
+    "opds-web-client": "^0.5.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-hook-form": "^4.9.2",
