Add Ability to Login Via Clever Auth (#113)
* add support for Clever login 

* display login button image when available

* updated opds-web-client to 0.5.4

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "author": "NYPL",
   "license": "Apache-2.0",
   "scripts": {
-    "dev": "next dev",
+    "dev": "node dev-server.js",
     "dev:axe": "REACT_AXE=true npm run dev",
     "build": "next build",
     "start": "next start",
