--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,6 +38,14 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: 13.x
+      - name: clone submodule
+        uses: actions/checkout@v2
+        with:
+          repository: NYPL/axisnow-access-control-web
+          path: axisnow-access-control-web
+          ref: v2
+          ssh-key: ${{ secrets.SUBMODULE_SSH_KEY }}
+          persist-credentials: false
       - name: Cache and install node modules
         uses: bahmutov/npm-install@v1
       - name: Typecheck
