set checkout from submodules to true

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,6 +41,7 @@ jobs:
       - name: clone submodule
         uses: actions/checkout@v2
         with:
+          submodules: true
           repository: NYPL/axisnow-access-control-web
           path: axisnow-access-control-web
           ref: v2
