--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,6 +37,7 @@ jobs:
       - name: Use Node.js 13.x
         uses: actions/setup-node@v1
         with:
+          submodules: true
           node-version: 13.x
       - name: clone submodule
         uses: actions/checkout@v2
