--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: true
-          ssh-key: ${{ secrets.AXIS_NOW_SSH_KEY }}
+          token: ${{ secrets.AXIS_NOW_ACCESS_TOKEN }}
       - name: Use Node.js 13.x
         uses: actions/setup-node@v1
         with:
@@ -39,7 +39,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: true
-          ssh-key: ${{ secrets.AXIS_NOW_SSH_KEY }}
+          token: ${{ secrets.AXIS_NOW_ACCESS_TOKEN }}
       - name: Use Node.js 13.x
         uses: actions/setup-node@v1
         with:
@@ -58,7 +58,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: true
-          ssh-key: ${{ secrets.AXIS_NOW_SSH_KEY }}
+          token: ${{ secrets.AXIS_NOW_ACCESS_TOKEN }}
       - name: Use Node.js 13.x
         uses: actions/setup-node@v1
         with:
