--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@theme-ui/color": "^0.3.1",
     "@theme-ui/components": "^0.3.1",
     "@theme-ui/match-media": "^0.3.1",
+    "@types/react-gtm-module": "^2.0.0",
     "deepmerge": "^4.2.2",
     "downloadjs": "^1.4.7",
     "font-awesome": "^4.7.0",
@@ -42,6 +43,7 @@
     "opds-web-client": "^0.5.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-gtm-module": "^2.0.10",
     "react-hook-form": "^4.9.2",
     "react-hot-loader": "^4.12.20",
     "react-redux": "7.2.1",
