--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "@types/jest": "^25.2.1",
     "@types/node": "^13.11.0",
     "@types/react": "^16.9.43",
-    "@types/react-redux": "^7.1.9",
+    "@types/react-redux": "7.1.9",
     "@types/theme-ui": "^0.3.1",
     "@typescript-eslint/eslint-plugin": "^2.31.0",
     "@typescript-eslint/parser": "^2.31.0",
