Cleans up useBorrow book and moves BorrowAndReserve to its own component

--- a/.env
+++ b/.env
@@ -14,7 +14,7 @@ CACHE_EXPIRATION_SECONDS=86400
 # REACT_AXE=true
 
 # turn this on to enable axisNow decryption
-# AXIS_NOW_DECRYPT=true
+# NEXT_PUBLIC_AXIS_NOW_DECRYPT=true
 
 # The app that this is running as.  Can be `simplye` or `openebooks`
 # NEXT_PUBLIC_COMPANION_APP=openebooks
