--- a/.github/workflows/publish-beta.yml
+++ b/.github/workflows/publish-beta.yml
@@ -21,11 +21,10 @@ jobs:
         run: echo "::set-output name=short_sha::$(git rev-parse --short HEAD)"
       - name: Publish to Docker Hub
         id: publish_docker_hub
-        uses: docker/build-push-action@v1
+        uses: docker/build-push-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-          repository: nypl/patron-web
           # tag the image with both beta and beta.short_sha
-          tags: beta, beta.${{ steps.get_sha.outputs.short_sha }}
+          tags: nypl/patron-web.beta, nypl/patron-web.beta.${{ steps.get_sha.outputs.short_sha }}
           add_git_labels: true
