--- a/.github/workflows/publish-beta.yml
+++ b/.github/workflows/publish-beta.yml
@@ -4,18 +4,19 @@ name: Publish beta
 # action will only run when a pull request to the beta branch is closed.
 on:
   pull_request:
-    branches: [beta]
-    types: [closed]
+  #T TODO: revert once this works
+    types: [opened, synchronize, reopened]
+
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   publish_beta:
     name: Publish beta image to Docker Hub
     # only run if the PR is merged.
-    if: github.event.pull_request.merged
+    # TODO: REVERT if: github.event.pull_request.merged
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v1
       - name: Get short SHA
         id: get_sha
         run: echo "::set-output name=short_sha::$(git rev-parse --short HEAD)"
@@ -25,6 +26,7 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
+          repository: nypl/patron-web
           # tag the image with both beta and beta.short_sha
           tags: nypl/patron-web.beta, nypl/patron-web.beta.${{ steps.get_sha.outputs.short_sha }}
           add_git_labels: true
