--- a/.github/workflows/publish-beta.yml
+++ b/.github/workflows/publish-beta.yml
@@ -4,22 +4,33 @@ name: Publish beta
 # action will only run when a pull request to the beta branch is closed.
 on:
   pull_request:
-  #T TODO: revert once this works
-    types: [opened, synchronize, reopened]
-
+    branches: [beta]
+    types: [closed]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   publish_beta:
     name: Publish beta image to Docker Hub
     # only run if the PR is merged.
-    # TODO: REVERT if: github.event.pull_request.merged
+    if: github.event.pull_request.merged
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v2
+        with:
+          submodules: true
+          token: ${{ secrets.AXIS_NOW_ACCESS_TOKEN }}
+
+      - id: nvmrc
+        run: echo ::set-output name=NODE_VERSION::$(cat .nvmrc)
+
+      - name: Use Node Version from nvmrc
+        uses: actions/setup-node@v1
+        with: { node-version: '${{ steps.nvmrc.outputs.NODE_VERSION }}' }
+
       - name: Get short SHA
         id: get_sha
         run: echo "::set-output name=short_sha::$(git rev-parse --short HEAD)"
+
       - name: Publish to Docker Hub
         id: publish_docker_hub
         uses: docker/build-push-action@v2
