--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@emotion/core": "^10.0.28",
     "@emotion/styled": "^10.0.27",
     "@nypl/design-system-react-components": "^0.7.2",
+    "@nypl/dgx-svg-icons": "^0.3.12",
     "@theme-ui/color": "^0.4.0-rc.3",
     "@theme-ui/components": "^0.3.1",
     "@theme-ui/match-media": "^0.3.1",
@@ -39,7 +40,6 @@
     "next": "^9.5.3",
     "next-transpile-modules": "^4.0.0",
     "opds-feed-parser": "0.0.18",
-    "opds-web-client": "^0.5.5",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-hook-form": "^4.9.2",
@@ -47,6 +47,7 @@
     "react-redux": "^7.1.0",
     "reakit": "^1.2.4",
     "redux": "4.0.1",
+    "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
     "request": "^2.88.2",
     "styled-system": "^5.1.2",
@@ -59,6 +60,7 @@
     "@testing-library/react": "^11.0.2",
     "@testing-library/react-hooks": "^3.2.1",
     "@testing-library/user-event": "^12.1.4",
+    "@types/downloadjs": "^1.4.2",
     "@types/enzyme": "^3.10.5",
     "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/history": "^4.7.5",
@@ -68,6 +70,7 @@
     "@types/react": "^16.9.49",
     "@types/react-redux": "^7.1.9",
     "@types/theme-ui": "^0.3.1",
+    "@types/xml2js": "^0.4.5",
     "@typescript-eslint/eslint-plugin": "^4.1.0",
     "@typescript-eslint/parser": "^4.1.0",
     "babel-jest": "^26.3.0",
