#3: Remove auth plugins (#138)
* add files

* data adapter

* auth plugin

* mergeRootProps

* imports

* rest of files

* add OPDS1 types

* remove auth plugins

* add useUser

* add auth form

* remove auth state

* make auth form work

* remove loans

* fix parse error

* remove auth state

* sign out

* get auth working

* fix form

* add modal close

* added no method ui

* add server errors

* fix auth flow

* don't show close on sign out modal

* add auth error to form

* saml credentials working

* fix clever button

* reorganize useCredentials

* move loading indicator into form

* AuthForm unused vars

* refactor useCredentials

* replace custom icon with DS icon

* delete loans file

--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
     "@theme-ui/components": "^0.3.1",
     "@theme-ui/match-media": "^0.3.1",
     "deepmerge": "^4.2.2",
+    "dompurify": "^2.0.15",
     "downloadjs": "^1.4.7",
     "font-awesome": "^4.7.0",
     "history": "^4.10.1",
+    "js-cookie": "^2.2.1",
     "jsdom": "^16.2.2",
     "library-simplified-webpub-viewer": "0.2.2",
     "lodash": "^4.17.20",
@@ -48,9 +50,11 @@
     "reakit": "^1.2.4",
     "redux": "4.0.1",
     "redux-devtools-extension": "^2.13.8",
+    "redux-localstorage": "^0.4.1",
     "redux-thunk": "^2.3.0",
     "request": "^2.88.2",
     "styled-system": "^5.1.2",
+    "swr": "^0.3.2",
     "system-font-css": "^2.0.2",
     "theme-ui": "^0.3.1"
   },
@@ -65,6 +69,7 @@
     "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/history": "^4.7.5",
     "@types/jest": "^26.0.13",
+    "@types/js-cookie": "^2.2.6",
     "@types/node": "^14.6.4",
     "@types/pako": "^1.0.1",
     "@types/react": "^16.9.49",
