--- a/.github/workflows/publish-beta.yml
+++ b/.github/workflows/publish-beta.yml
@@ -21,8 +21,8 @@ runs-on: ubuntu-latest
           submodules: true
           token: ${{ secrets.AXIS_NOW_ACCESS_TOKEN }}
 
-#       - id: nvmrc
-#         run: echo ::set-output name=NODE_VERSION::$(cat .nvmrc)
+      - id: nvmrc
+        run: echo ::set-output name=NODE_VERSION::$(cat .nvmrc)
 
       - name: Use Node Version from nvmrc
         uses: actions/setup-node@v1
@@ -40,9 +40,9 @@ runs-on: ubuntu-latest
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-#       - name: Get short SHA
-#         id: get_sha
-#         run: echo "::set-output name=short_sha::$(git rev-parse --short HEAD)"
+      - name: Get short SHA
+        id: get_sha
+        run: echo "::set-output name=short_sha::$(git rev-parse --short HEAD)"
 
       - name: Build and push to Docker Hub
         id: publish_docker_hub
