YAML Config File (#155)
* parse yaml file

* comments

* fetch config file at startup

* config tests

* mock

* remove next public companion app env var

* remove unused env vars

* tests

* sample config

* capitalize config

* lint

* gitignore change to add app config

* move gitingored config to root

* readme

* changelog

* reload app config on change

* fix download icon

* update book details ordering

* fix icon generation

* only one borrow button

* Read Online button fix

* update fulfillment card

* fix book list

* BookData to AnyBook

* type fixes

* type fixes

* type fixes

* type fixes

* fulfillment card

* parse tests

* fix feed fixtures

* book list tests

* borrow or reserve tests

* tests

* fix mock

* fixes

* changelog

* fix book list

* icons format

* lint

* suppress console warning in webpub viewer test

* mock config in error tests

* fix link utilities

* fix links

* comment

* fix icon

* spelling

* fix icon again

* fix tests

* tests

* update docker compose

* normalize book list item from loans

* remove console

* readme

* add community config

* update community config

--- a/.env
+++ b/.env
@@ -1,19 +1,7 @@
-# Can only set one of the following variables
-# CONFIG_FILE=config/cm_libraries.txt
-# SIMPLIFIED_CATALOG_BASE=xxx
-# LIBRARY_REGISTRY=xxx
-
-# App defaults
-# defaults to 60 * 60 * 24 (one day)
-CACHE_EXPIRATION_SECONDS=86400
+# must set a config file
+CONFIG_FILE=/community-config.yml
 
 # turn this on to enable react-axe in development
 # process.env values are strings, so setting this to "false" will
 # unexpectedly turn it on.
 # REACT_AXE=true
-
-# turn this on to enable axisNow decryption
-# NEXT_PUBLIC_AXIS_NOW_DECRYPT=true
-
-# The app that this is running as.  Can be `simplye` or `openebooks`
-# NEXT_PUBLIC_COMPANION_APP=openebooks
