--- a/.env
+++ b/.env
@@ -5,3 +5,6 @@ CONFIG_FILE=/community-config.yml
 # process.env values are strings, so setting this to "false" will
 # unexpectedly turn it on.
 # REACT_AXE=true
+
+# turn this on to enable axisnow decryption
+# NEXT_PUBLIC_AXISNOW_DECRYPT=true
