--- a/package.json
+++ b/package.json
@@ -57,6 +57,9 @@
     "system-font-css": "^2.0.2",
     "theme-ui": "^0.3.1"
   },
+  "optionalDependencies": {
+    "@nypl-simplified-packages/axisnow-access-control-web": "^1.0.2"
+  },
   "devDependencies": {
     "@next/bundle-analyzer": "^9.5.3",
     "@testing-library/jest-dom": "^5.5.0",
