--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,17 @@ on:
     types: [opened, synchronize, reopened]
 
 jobs:
+  # changelog must be edited for every PR
+  changelog:
+    name: Updates Changelog
+    runs-on: ubuntu-latest
+    steps: 
+      - uses: actions/checkout@v2
+      - uses: dangoslen/changelog-enforcer@v1.4.0
+        with:
+          changeLogPath: 'CHANGELOG.md'
+          skipLabel: 'no-changelog'
+
   lint:
     name: Lint
     runs-on: ubuntu-latest
