--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "moment": "^2.24.0",
     "next": "^9.5.3",
     "next-transpile-modules": "^4.0.0",
+    "nodegit": "^0.27.0",
     "opds-feed-parser": "0.0.18",
     "react": "16.13.1",
     "react-dom": "16.13.1",
