--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "test:ci": "jest --ci",
     "lint": "eslint '*/**/*.{ts,tsx}'",
     "lint:fix": "eslint '*/**/*.{js,ts,tsx}' --quiet --fix",
-    "generate-icons": "npx @svgr/cli --template src/icons/_template.js --typescript --icon --ext tsx --svg-props 'fill=currentColor' -d src/icons src/icons"
+    "generate-icons": "npx @svgr/cli --template src/icons/_template.js --typescript --icon --ext tsx --svg-props 'fill=currentColor' -d src/icons src/icons",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
     "@bugsnag/js": "^7.3.5",
@@ -33,7 +35,7 @@
     "@theme-ui/components": "^0.3.1",
     "@theme-ui/match-media": "^0.3.1",
     "deepmerge": "^4.2.2",
-    "dompurify": "^2.0.15",
+    "dompurify": "^2.2.0",
     "downloadjs": "^1.4.7",
     "font-awesome": "^4.7.0",
     "history": "^4.10.1",
@@ -61,11 +63,18 @@
     "@nypl-simplified-packages/axisnow-access-control-web": "^1.0.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.12.3",
     "@next/bundle-analyzer": "^9.5.3",
+    "@storybook/addon-actions": "^6.0.26",
+    "@storybook/addon-essentials": "^6.0.26",
+    "@storybook/addon-links": "^6.0.26",
+    "@storybook/react": "^6.0.26",
+    "@testing-library/dom": "^7.26.4",
     "@testing-library/jest-dom": "^5.5.0",
     "@testing-library/react": "^11.0.2",
     "@testing-library/react-hooks": "^3.2.1",
     "@testing-library/user-event": "^12.1.4",
+    "@types/dompurify": "^2.0.4",
     "@types/downloadjs": "^1.4.2",
     "@types/enzyme": "^3.10.5",
     "@types/enzyme-adapter-react-16": "^1.0.6",
@@ -81,6 +90,7 @@
     "@typescript-eslint/eslint-plugin": "^4.1.0",
     "@typescript-eslint/parser": "^4.1.0",
     "babel-jest": "^26.3.0",
+    "babel-loader": "^8.1.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.4",
     "eslint": "^7.8.1",
@@ -96,6 +106,7 @@
     "jest-fetch-mock": "^3.0.3",
     "prettier": "2.1.1",
     "react-axe": "^3.4.1",
+    "react-is": "^16.13.1",
     "react-test-renderer": "^16.13.1",
     "typescript": "^4.0.2",
     "val-loader": "^2.1.1",
