--- a/.github/workflows/release-prod.yml
+++ b/.github/workflows/release-prod.yml
@@ -51,7 +51,7 @@ jobs:
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Publish to Docker Hub
         uses: docker/build-push-action@v2
