--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "history": "^4.10.1",
     "js-cookie": "^2.2.1",
     "jsdom": "^16.2.2",
-    "library-simplified-webpub-viewer": "0.2.5",
+    "library-simplified-webpub-viewer": "^0.2.6",
     "lodash": "^4.17.20",
     "moment": "^2.24.0",
     "next": "^9.5.3",
