Hotfix: fix release workflow prod->qa (#220) (#223)
* fix workflow tag syntax

* one more newline

--- a/.github/workflows/release-prod.yml
+++ b/.github/workflows/release-prod.yml
@@ -59,7 +59,9 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: nypl/patron-web:${{steps.autotagger.outputs.version}}, nypl/patron-web:latest
+          tags: |
+            nypl/patron-web:${{steps.autotagger.outputs.version}}
+            nypl/patron-web:latest
           # allows us to install the private axisnow package
           build-args: |
             github_token=${{ secrets.GH_PACKAGES_TOKEN }}
