Fix: back forward lane button (SIMPLY-3214)  (#215)
* [SIMPLY-3214] Update comment for clarity.

* [SIMPLY-3214] Implement intersection observable to detect when the "View All" card is 100% visible in the viewport.

* [SIMPLY-3214] Code cleanup.

* [SIMPLY-3214] Code cleanup.

* [SIMPLY-3214] Add lint script compatibility for Windows machines

* [SIMPLY-3214] Code lint issue fixes

* [SIMPLY-3214] Hoist the initialization of the observable into the parent component to eliminate unnecessary state variable.

* [SIMPLY-3214] Change the observable's root element from the document itself to its corresponding lane.  Fixes issue where scrolling a lane partially offscreen vertically would also disable the "next" button.

* [SIMPLY-3214] Code cleanup.

* [SIMPLY-3214] Update changelog

* whitespace

* upgrade packages

* [SIMPLY-3214] Add missing test dependencies.

* [SIMPLY-3214] Fix merge-related issue.

* [SIMPLY-3214] Relocate the intersection-observer import so that other tests can also locate this resource.

* [SIMPLY-3214] PR Feedback

* [SIMPLY-3214] Update lint script to multi-platform format. Remove dependency on run-script-os.

Co-authored-by: Michael Kaplan <MKaplan@whereoware.com>
Co-authored-by: kristojorg <kristo.jorgenson@gmail.com>
Co-authored-by: Kristo Jorgenson <kristojorg@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "build-and-start": "npm run build && npm run start",
     "test": "TZ=UTC jest --watch",
     "test:ci": "jest --ci",
-    "lint": "eslint '*/**/*.{ts,tsx}'",
-    "lint:fix": "eslint '*/**/*.{js,ts,tsx}' --quiet --fix",
+    "lint": "eslint \"*/**/*.{ts,tsx}\"",
     "generate-icons": "npx @svgr/cli --template src/icons/_template.js --typescript --icon --ext tsx --svg-props 'fill=currentColor' -d src/icons src/icons",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
@@ -54,6 +53,7 @@
     "react-dom": "16.13.1",
     "react-hook-form": "^4.9.2",
     "react-hot-loader": "^4.12.20",
+    "react-intersection-observer": "^8.30.3",
     "react-redux": "^7.1.0",
     "reakit": "^1.2.4",
     "request": "^2.88.2",
@@ -66,7 +66,7 @@
     "@nypl-simplified-packages/axisnow-access-control-web": "^1.0.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.3",
+    "@babel/core": "^7.12.7",
     "@next/bundle-analyzer": "^9.5.3",
     "@storybook/addon-actions": "^6.1.2",
     "@storybook/addon-essentials": "^6.1.2",
@@ -79,10 +79,10 @@
     "@testing-library/user-event": "^12.1.4",
     "@types/dompurify": "^2.0.4",
     "@types/downloadjs": "^1.4.2",
-    "@types/enzyme": "^3.10.5",
+    "@types/enzyme": "^3.10.8",
     "@types/enzyme-adapter-react-16": "^1.0.6",
-    "@types/history": "^4.7.5",
-    "@types/jest": "^26.0.13",
+    "@types/history": "^4.7.8",
+    "@types/jest": "^26.0.15",
     "@types/js-cookie": "^2.2.6",
     "@types/node": "^14.6.4",
     "@types/pako": "^1.0.1",
@@ -92,10 +92,10 @@
     "@types/xml2js": "^0.4.5",
     "@typescript-eslint/eslint-plugin": "^4.1.0",
     "@typescript-eslint/parser": "^4.1.0",
-    "babel-jest": "^26.3.0",
-    "babel-loader": "^8.1.0",
+    "babel-jest": "^26.6.3",
+    "babel-loader": "^8.2.1",
     "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.4",
+    "enzyme-adapter-react-16": "^1.15.5",
     "eslint": "^7.8.1",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-jsx-a11y": "^6.2.3",
@@ -104,7 +104,7 @@
     "eslint-plugin-react-hooks": "^4.1.0",
     "fetch-mock": "^9.4.0",
     "fetch-mock-jest": "^1.2.4",
-    "jest": "^26.4.2",
+    "jest": "^26.6.3",
     "jest-emotion": "^10.0.32",
     "jest-fetch-mock": "^3.0.3",
     "prettier": "2.1.1",
