[Simply 3311] - image optimization (#227)
* [SIMPLY-3311] Create new component which returns an img element (and all of its props) along with a unique data-src attribute which will be used for lazy load purposes.

* [SIMPLY-3311] Refactor and simplify the lazy image component

* [SIMPLY-3311] Set up ref forwarding

* [SIMPLY-3311] Add back missing lint:fix directive.

* [SIMPLY-3311] Code cleanup and commenting.

* [SIMPLY-3311] Changelog

* [SIMPLY-3311] PR Feedback

* [SIMPLY-3311] PR Feedback

* [SIMPLY-3311] Fix lint issue.

* [SIMPLY-3311] Fix lint issue.

* [SIMPLY-3311] Add tests for LazyImage component

* [SIMPLY-3311] Lint issues.

* rename

* type error

Co-authored-by: Michael Kaplan <MKaplan@whereoware.com>
Co-authored-by: kristojorg <kristo.jorgenson@gmail.com>

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "test": "TZ=UTC jest --watch",
     "test:ci": "jest --ci",
     "lint": "eslint \"*/**/*.{ts,tsx}\"",
+    "lint:fix": "eslint \"*/**/*.{ts,tsx}\" --fix",
     "generate-icons": "npx @svgr/cli --template src/icons/_template.js --typescript --icon --ext tsx --svg-props 'fill=currentColor' -d src/icons src/icons",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
