--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "@nypl-simplified-packages/axisnow-access-control-web": "^1.0.2"
   },
   "devDependencies": {
+    "@axe-core/react": "^4.1.0",
     "@babel/core": "^7.12.7",
     "@next/bundle-analyzer": "^9.5.3",
     "@storybook/addon-actions": "^6.1.2",
@@ -88,6 +89,7 @@
     "@types/node": "^14.6.4",
     "@types/pako": "^1.0.1",
     "@types/react": "^16.9.49",
+    "@types/react-dom": "^17.0.0",
     "@types/react-redux": "^7.1.9",
     "@types/theme-ui": "^0.3.1",
     "@types/xml2js": "^0.4.5",
@@ -109,7 +111,6 @@
     "jest-emotion": "^10.0.32",
     "jest-fetch-mock": "^3.0.3",
     "prettier": "2.1.1",
-    "react-axe": "^3.4.1",
     "react-is": "^16.13.1",
     "react-test-renderer": "^16.13.1",
     "typescript": "^4.0.2",
